--- a/pycom/com_config.yaml
+++ b/pycom/com_config.yaml
@@ -1,3 +1,3 @@
-- command: cid
-  interval: 10
-  count: 100
+- command: "[AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON]"
+  interval: 5
+  count: -1
