--- a/pycom/com_config.yaml
+++ b/pycom/com_config.yaml
@@ -1,3 +1,4 @@
+# interval is millisecond
 - command: "[AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON]"
   interval: 5
   count: -1
