--- a/pycom/com_config.yaml
+++ b/pycom/com_config.yaml
@@ -1,4 +1,4 @@
 # interval is millisecond
-- command: "[AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON][AUTO,ON]"
-  interval: 5
+- command: "[AUTO,ON11]"
+  interval: 20
   count: -1
