--- a/pycom/compare_config.yaml
+++ b/pycom/compare_config.yaml
@@ -1,4 +1,6 @@
-- compare_str: '1111111111111111111111111111'
-  send_cmd: '1'
-- compare_str: 'network status 0 --> 1'
-  send_cmd: 'lastgasp'
+- compare_str: 'Sync initial done'
+  send_cmd: '[AUTO,ON]'
+- compare_str: 'warm reboot, '
+  send_cmd: '[AUTO,RANDOM_ATTACH,ON]'
+- compare_str: 'DEBUG: FUNC[dump_buf_really ] LINE[427 ]:   60 00 00'
+  send_cmd: '[AUTO,REBOOT]'
